vlib/v/checker/tests/struct_voidptr_field_no_ptr_struct_value_err.vv
struct Foo {
	num int
}

struct Foo2 {
	a voidptr
}

fn main() {
	_ := Foo2{
		a: Foo{}
	}
}
